--- a/styles.css
+++ b/styles.css
@@ -1,22 +1,20 @@
 p{
-    color: white !important;
     font-size: 1.2rem;
 }
 
-
+.backgrounds{
+    background:url(/AdobeColorGradient\ gradient_bestRl\ jounrer.png);
+}
 .createdSlide{
-    display: grid !important ;    
+    display: grid  !important ;    
     grid-template-columns: 1fr 1fr !important ;
     align-items: center;
     justify-items: center;
     justify-content: center;
-   /* display: flex !important;
-   
-   justify-content: space-between !important; */
      gap: 2rem;  
      text-align: left;
-   /* top: 16% !important; */
-   /* z-index: -999999;  */
-   /* float: left; */
    }
    
+   
+
+  
